<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/registro"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="40dp" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="122dp" />

    <EditText
        android:id="@+id/telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="209dp"
        android:ems="10"
        android:hint="@string/telefono"

        android:inputType="phone"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="214dp" />


    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/telefono"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="324dp">

        <RadioButton
            android:id="@+id/profesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profesor"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="364dp" />

        <RadioButton
            android:id="@+id/estudiante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estudiante"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="318dp" />
    </RadioGroup>

    <Button
        android:id="@+id/guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:text="@string/guardar"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="418dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:hint="Correo"
        android:inputType="textEmailAddress" />

</RelativeLayout>